import was referencing the wrong placed. replace the from with the correct place

--- a/src/webparts/documentHub/DocumentHubWebPart.module.scss
+++ b/src/webparts/documentHub/DocumentHubWebPart.module.scss
@@ -9,7 +9,7 @@
   height: 100%;
 }
 
-@import '~@microsoft/sp-office-ui-fabric-core/dist/sass/SPFabricCore.scss';
+@import '~office-ui-fabric-core/dist/sass/References.scss';
 
 .topBar {
   display: flex;
